@@ -53,18 +53,17 @@ public final class UseListsAndMaps {
          * element of the first list. You can not use any "magic number".
          * (Suggestion: use a temporary variable)
          */
-        final int el = arrayList.get(arrayList.size() - 1);
-        arrayList.set(arrayList.size() - 1, arrayList.get(0));
+        final int el = arrayList.getLast();
+        arrayList.set(arrayList.size() - 1, arrayList.getFirst());
         arrayList.set(0, el);
         /*
          * 4) Using a single for-each, print the contents of the arraylist.
          */
         final var builder = new StringBuilder();
         for (final int i : arrayList) {
-            builder.append(i);
-            builder.append(", ");
+            builder.append(i).append(", ");
         }
-        if (builder.length() > 0) {
+        if (!builder.isEmpty()) {
             builder.delete(builder.length() - 2, builder.length());
         }
         log(builder);
@@ -77,13 +76,13 @@ public final class UseListsAndMaps {
          */
         long time = System.nanoTime();
         for (int i = 0; i < ELEMENTS; i++) {
-            arrayList.add(0, i);
+            arrayList.addFirst(i);
         }
         time = System.nanoTime() - time;
         log("Inserting " + ELEMENTS + " elements as first in an ArrayList took " + timeAsString(time));
         time = System.nanoTime();
         for (int i = 0; i < ELEMENTS; i++) {
-            linkedList.add(0, i);
+            linkedList.addFirst(i);
         }
         time = System.nanoTime() - time;
         log("Inserting " + ELEMENTS + " elements as first in a LinkedList took " + timeAsString(time));
@@ -112,17 +111,17 @@ public final class UseListsAndMaps {
         /*
          * 7) Build a new Map that associates to each continent's name its
          * population:
-         * 
+         *
          * Africa -> 1,110,635,000
-         * 
+         *
          * Americas -> 972,005,000
-         * 
+         *
          * Antarctica -> 0
-         * 
+         *
          * Asia -> 4,298,723,000
-         * 
+         *
          * Europe -> 742,452,000
-         * 
+         *
          * Oceania -> 38,304,000
          */
         final Map<String, Long> world = new HashMap<>();
